// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component sanity matches default snapshot 1`] = `
.c0 {
  text-align: left;
}

.c0 {
  box-sizing: border-box;
}

<form
  class="c0"
>
  
</form>
`;

exports[`Form component sanity matches themed snapshot 1`] = `
.c1 {
  text-align: left;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  margin-bottom: 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
}

.c8 {
  margin-bottom: 16px;
  color: #4E3FCE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  opacity: 1;
}

.c8 {
  box-sizing: border-box;
}

.c6 {
  color: #28C081;
}

.c7 {
  color: #DC2C10;
}

.c5 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: #3F3D4B;
  background-color: #fff;
  width: 100%;
  font-size: 1rem;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
}

.c5 {
  box-sizing: border-box;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c5:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c5:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c5:valid {
  border-color: #28C081;
}

.was-validated .c5:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c5:invalid {
  border-color: #EC9081;
}

.was-validated .c5:invalid ~ svg.icon-invalid {
  visibility: visible;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > svg {
  position: absolute;
  right: 1rem;
  visibility: hidden;
}

.c3 {
  margin-bottom: 8px;
  color: #3F3D4B;
  font-size: 14px;
  text-align: left;
  font-size: 14px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  text-align: left;
  line-height: 1.5;
}

.c3 {
  box-sizing: border-box;
}

.c10 {
  margin-left: 4px;
  margin-right: 8px;
  color: #3F3D4B;
  font-size: 14px;
  text-align: left;
  font-size: 14px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  text-align: left;
  line-height: 1.5;
}

.c10 {
  box-sizing: border-box;
}

.c9 {
  text-align: left;
}

.c9 {
  box-sizing: border-box;
}

.c9 {
  position: relative;
  display: inline-block;
}

.c9 > input {
  position: relative;
  display: block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c9 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #CCC;
}

.c9 > svg[name="checked"] {
  display: none;
  z-index: 1;
  fill: #4E3FCE;
}

.c9 > input:checked ~ svg[name="checked"] {
  display: block;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <form
    class="c1"
  >
    <label
      class="c2"
      display="flex"
      width="1"
    >
      <div
        class="c3"
        color="copyColor"
        font-family="sansSerif"
        font-size="1"
        font-weight="3"
      >
        Email
      </div>
      <div
        class="c4"
        required=""
        type="email"
        width="1"
      >
        <input
          class="c5"
          color="copyColor"
          font-family="sansSerif"
          font-size="1rem"
          height="3rem"
          required=""
          type="email"
          width="1"
        >
          
        </input>
        <svg
          class="icon-valid c6"
          color="#28C081"
          display="block"
          fill="currentcolor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          >
            
          </path>
        </svg>
        <svg
          class="icon-invalid c7"
          color="#DC2C10"
          display="block"
          fill="currentcolor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          >
            
          </path>
        </svg>
      </div>
    </label>
    <label
      class="c2"
      display="flex"
      width="1"
    >
      <div
        class="c3"
        color="copyColor"
        font-family="sansSerif"
        font-size="1"
        font-weight="3"
      >
        Password
      </div>
      <div
        class="c4"
        required=""
        type="password"
        width="1"
      >
        <input
          class="c5"
          color="copyColor"
          font-family="sansSerif"
          font-size="1rem"
          height="3rem"
          required=""
          type="password"
          width="1"
        >
          
        </input>
        <svg
          class="icon-valid c6"
          color="#28C081"
          display="block"
          fill="currentcolor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          >
            
          </path>
        </svg>
        <svg
          class="icon-invalid c7"
          color="#DC2C10"
          display="block"
          fill="currentcolor"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          >
            
          </path>
        </svg>
      </div>
    </label>
    <label
      class="c8"
      color="primary"
      display="flex"
      label="Remember me?"
      opacity="1"
    >
      <div
        class="c9"
      >
        <input
          color="primary"
          label="Remember me?"
          mb="3"
          theme="[object Object]"
          type="checkbox"
        >
          
        </input>
        <svg
          class=""
          fill="currentcolor"
          height="24"
          name="checked"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          >
            
          </path>
        </svg>
        <svg
          class=""
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          >
            
          </path>
        </svg>
      </div>
      <div
        class="c10"
        color="copyColor"
        font-family="sansSerif"
        font-size="1"
        font-weight="3"
      >
        Remember me?
      </div>
    </label>
  </form>
</div>
`;

exports[`Form component sanity renders children elements 1`] = `
.c0 {
  text-align: left;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-bottom: 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  text-align: left;
}

.c1 {
  box-sizing: border-box;
}

.c7 {
  margin-bottom: 16px;
  color: #4E3FCE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: left;
  opacity: 1;
}

.c7 {
  box-sizing: border-box;
}

.c5 {
  color: #28C081;
}

.c6 {
  color: #DC2C10;
}

.c4 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: #3F3D4B;
  background-color: #fff;
  width: 100%;
  font-size: 1rem;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c4:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c4:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c4:valid {
  border-color: #28C081;
}

.was-validated .c4:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c4:invalid {
  border-color: #EC9081;
}

.was-validated .c4:invalid ~ svg.icon-invalid {
  visibility: visible;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > svg {
  position: absolute;
  right: 1rem;
  visibility: hidden;
}

.c2 {
  margin-bottom: 8px;
  color: #3F3D4B;
  font-size: 14px;
  text-align: left;
  font-size: 14px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  text-align: left;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
}

.c9 {
  margin-left: 4px;
  margin-right: 8px;
  color: #3F3D4B;
  font-size: 14px;
  text-align: left;
  font-size: 14px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  text-align: left;
  line-height: 1.5;
}

.c9 {
  box-sizing: border-box;
}

.c8 {
  text-align: left;
}

.c8 {
  box-sizing: border-box;
}

.c8 {
  position: relative;
  display: inline-block;
}

.c8 > input {
  position: relative;
  display: block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c8 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #CCC;
}

.c8 > svg[name="checked"] {
  display: none;
  z-index: 1;
  fill: #4E3FCE;
}

.c8 > input:checked ~ svg[name="checked"] {
  display: block;
}

<form
  class="c0"
>
  <label
    class="c1"
    display="flex"
    width="1"
  >
    <div
      class="c2"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      Email
    </div>
    <div
      class="c3"
      required=""
      type="email"
      width="1"
    >
      <input
        class="c4"
        color="copyColor"
        font-family="sansSerif"
        font-size="1rem"
        height="3rem"
        required=""
        type="email"
        width="1"
      >
        
      </input>
      <svg
        class="icon-valid c5"
        color="#28C081"
        display="block"
        fill="currentcolor"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        >
          
        </path>
      </svg>
      <svg
        class="icon-invalid c6"
        color="#DC2C10"
        display="block"
        fill="currentcolor"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        >
          
        </path>
      </svg>
    </div>
  </label>
  <label
    class="c1"
    display="flex"
    width="1"
  >
    <div
      class="c2"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      Password
    </div>
    <div
      class="c3"
      required=""
      type="password"
      width="1"
    >
      <input
        class="c4"
        color="copyColor"
        font-family="sansSerif"
        font-size="1rem"
        height="3rem"
        required=""
        type="password"
        width="1"
      >
        
      </input>
      <svg
        class="icon-valid c5"
        color="#28C081"
        display="block"
        fill="currentcolor"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        >
          
        </path>
      </svg>
      <svg
        class="icon-invalid c6"
        color="#DC2C10"
        display="block"
        fill="currentcolor"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        >
          
        </path>
      </svg>
    </div>
  </label>
  <label
    class="c7"
    color="primary"
    display="flex"
    label="Remember me?"
    opacity="1"
  >
    <div
      class="c8"
    >
      <input
        color="primary"
        label="Remember me?"
        mb="3"
        theme="[object Object]"
        type="checkbox"
      >
        
      </input>
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="checked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        >
          
        </path>
      </svg>
      <svg
        class=""
        fill="currentcolor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        >
          
        </path>
      </svg>
    </div>
    <div
      class="c9"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      Remember me?
    </div>
  </label>
</form>
`;
